# oumigo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md  metrics.md  worker-node-states.md
src/oumigo/: __about__.py  __init__.py  api.py  discovery.py
src/oumigo/agent/: __init__.py  coordinator.py
src/oumigo/api/: __init__.py  api.py
src/oumigo/api/agent/: __init__.py  agent.py  chat.py  response.py  tool.py
src/oumigo/api/manager/: __init__.py  manager.py
src/oumigo/api/worker/: __init__.py  worker.py
src/oumigo/cli/: __init__.py  main.py
src/oumigo/common/: __init__.py  env.py  http.py  identity.py  logging.py  proc.py
src/oumigo/config/: __init__.py  locate.py  resolve.py  spec.py
src/oumigo/manager/: auth.py  console.py  launcher.py  settings.py
src/oumigo/manager/control/: registry.py  server.py  store.py
src/oumigo/manager/dashboard/: __init__.py  __main__.py  server.py  source.py
src/oumigo/manager/router/: server.py
src/oumigo/protocol/: __init__.py  messages.py  states.py
src/oumigo/providers/: __init__.py  base.py  factory.py  static.py
src/oumigo/service/: __init__.py
src/oumigo/service/manager/: __init__.py  console.py  launcher.py
src/oumigo/service/manager/control/: __init__.py  server.py
src/oumigo/service/manager/dashboard/: __init__.py  __main__.py  aggregate.py  server.py  source.py  web.py
src/oumigo/service/manager/router/: __init__.py  server.py
src/oumigo/service/worker/: coordinator.py  hf_server.py  identity.py  metrics.py  supervisor.py
src/oumigo/worker/: client.py  coordinator.py  hf_server.py  identity.py  metrics.py  supervisor.py
tests/: pressure_test.py  test_api.py  test_chat.py  test_dashboard_aggregate.py  test_env.py  test_metrics.py  test_registry_naming.py  test_router.py  test_smoke.py  test_store.py  test_supervisor.py  test_tool.py  worker_hf_test.py  worker_stub_test.py
