[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oumigo"
dynamic = ["version"]
description = "Vertical-integration toolkit for running and managing vLLM replica fleets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GOTOAI" }]
keywords = ["vllm", "llm", "inference", "cluster", "serving"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",       # HTTP client (worker -> manager, router -> vllm)
    "fastapi>=0.110",    # control/data-plane HTTP servers (worker + manager)
    "uvicorn>=0.29",
    "typer>=0.12",       # single CLI with subcommands
    "pyyaml>=6",         # config files
    "zeroconf>=0.130",   # LAN discovery (mDNS / DNS-SD)
]

[project.optional-dependencies]
worker = [
    # Installed only on GPU worker nodes (L1). Heavy; pin a tested range later.
    "vllm>=0.5",
]
manager = [
    # Manager-only extras (dashboard tooling, etc.). No vLLM here, by design.
]
conoha = [
    # Future L2 backend. ConoHa is OpenStack-based, so this will likely be:
    # "openstacksdk>=3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
oumigo = "oumigo.cli.main:main"

[tool.hatch.version]
path = "src/oumigo/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/oumigo"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
