[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oumigo"
dynamic = ["version"]
description = "Vertical-integration toolkit for running and managing vLLM replica fleets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GOTOAI" }]
keywords = ["vllm", "llm", "inference", "cluster", "serving"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",       # HTTP client (worker -> manager, router -> vllm)
    "fastapi>=0.110",    # control/data-plane HTTP servers (worker + manager)
    "uvicorn>=0.29",
    "typer>=0.12",       # single CLI with subcommands
    "pyyaml>=6",         # config files
    "zeroconf>=0.130",   # LAN discovery (mDNS / DNS-SD)
]

[project.optional-dependencies]
worker = [
    # Installed only on GPU worker nodes (L1). Heavy; pin a tested range later.
    # One unified venv serves BOTH backends: `oumigo worker run --backend=vllm|transformer`.
    #
    # torch is intentionally NOT listed: vLLM hard-pins it (e.g. torch==2.11.0 for
    # vLLM 0.25.x) and pulls the matching CUDA wheel transitively. Do NOT install a
    # separate/unpinned torch — vLLM's pin is authoritative and the HF stack below
    # rides on it. See INSTALL.md for the GPU-box flow.
    "vllm>=0.5",

    # --backend=transformer: HF-Transformers serving (oumigo.service.worker.hf_server). vLLM
    # itself requires transformers v5, so these coexist with vLLM in one venv.
    "transformers>=5.10.1",  # Gemma 4 needs transformers v5
    "accelerate",            # device_map / sharded model loading
    "bitsandbytes",          # 4-bit (nf4) quantization on CUDA
    "pillow",                # multimodal processor dependency (also a vLLM dep)
    "timm",                  # multimodal processor dependency
    # NOTE: fastapi / uvicorn / httpx are already base deps; pytest is in [dev];
    # python-dotenv is unneeded (oumigo has a stdlib .env loader). So they are not
    # repeated here — `pip install -e '.[worker]'` already covers the serving stack.
]
manager = [
    # Manager-only extras (dashboard tooling, etc.). No vLLM here, by design.
]
conoha = [
    # Future L2 backend. ConoHa is OpenStack-based, so this will likely be:
    # "openstacksdk>=3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
oumigo = "oumigo.cli.main:main"

[tool.hatch.version]
path = "src/oumigo/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/oumigo"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
